[package]
name = "key-resolver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5.1"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
fi-common = "0.0.1"
multibase = "0.9.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8" 
